[package]
name = "kobuki-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
bytes = "1.10.1"
log = "0.4.26"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["codec"] }

[dev-dependencies]
anyhow = "1"
env_logger = "0.11.7"
